<resources>

    <string name="app_name">MealsMadeEasy</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="google_login_fail">Google Sign In failed</string>

    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>

    <string name="week_at_a_glance">Week at a glance</string>
    <string name="week_at_a_glance_delete_prompt">Do you really want to remove this meal from your meal plan?</string>
    <string name="week_at_a_glance_delete_prompt_positive_ack">Delete</string>
    <string name="week_at_a_glance_delete_prompt_negative_ack">Cancel</string>
    <string name="week_at_a_glance_meal_deleted">Removed meal</string>
    <string name="week_at_a_glance_undo_delete">Undo</string>
    <string name="week_at_a_glance_delete_menu">Delete</string>
    <string name="week_at_a_glance_edit_servings_menu">Edit Servings&#8230;</string>
    <string name="week_at_a_glance_edit_servings_title">Edit servings for \"%1$s\"</string>
    <string name="week_at_a_glance_edit_servings_confirm">Confirm</string>
    <string name="week_at_a_glance_edit_servings_cancel">Cancel</string>
    <string name="week_at_a_glance_edit_servings_updated">Servings updated</string>

    <string name="grocery_list">Grocery list</string>
    <string name="error_grocery_list_load">Failed to load grocery list</string>

    <string name="action_try_again">Try again</string>
    <string name="action_cancel">Cancel</string>

    <string name="profile">Profile</string>
    <string name="profile_birthday_prompt">Birthday</string>
    <string name="profile_height_prompt">Height</string>
    <string name="profile_weight_prompt">Weight</string>
    <string name="profile_sex_prompt">Gender</string>
    <string name="profile_height_inches_prompt">0\"</string>
    <string name="profile_height_feet_units">Feet</string>
    <string name="profile_height_inches_units">Inches</string>
    <string name="profile_weight_lbs_units">lbs</string>
    <string name="profile_button_text">Save Changes</string>
    <string name="profile_spinner_prompt">Sex</string>
    <string name="profile_prompt_positive_ack">OK</string>
    <string name="error_profile_underage">You must be at least 13 years old to use this application</string>
    <string name="error_profile_invalid_bmi">Please enter a valid height and weight combination</string>
    <string name="error_profile_invalid_height_inches">Inches must be between 0 and 11, inclusive</string>
    <string name="success_profile_updated">Your information has been updated</string>
    <string name="error_profile_not_updated">Couldn\'t update your profile right now</string>
    <string name="error_profile_not_loaded">Your profile couldn\'t be loaded right now</string>

    <string name="onboarding_header">You\'re almost ready</string>
    <string name="onboarding_message">We have a few questions for you to make sure we give you the most relevant information possible</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="gender_undisclosed">Undisclosed</string>

    <string name="discover">Discover</string>
    <string name="failed_to_load_suggestions">Couldn\'t access suggestions</string>

    <string name="meal_page_minutes">Minutes</string>
    <string name="meal_page_bullet">&#8226;</string>
    <string name="meal_page_failed_to_load_meal">Couldn\'t find that meal</string>
    <string name="meal_page_failed_to_load_recipe">Couldn\'t find the meal\'s recipe</string>

    <string name="add_to_plan_title">Add to meal plan&#8230;</string>
    <string name="add_to_plan_servings">Servings</string>
    <string name="add_to_plan_meal">Meal</string>
    <string name="add_to_plan_date_hint">Choose a date</string>
    <string-array name="meal_spinner_entries">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="add_to_plan_button">Add to meal plan</string>
    <string name="add_to_plan_date_not_selected">Choose a date for the meal</string>
    <string name="add_to_plan_meal_added">Meal has been added to your meal plan</string>

    <string name="search_bar_title">Search recipes</string>
    <string name="failed_to_load_search_results">Couldn\'t access search results</string>
    <string name="search_screen_title">Search recipes</string>
    <string name="filter_icon_title">Filter</string>
    <string name="filter_bottom_sheet_title">Filter</string>
    <string name="filter_categories_heading">Categories</string>
    <string name="filter_clear_button_text">Clear Filters</string>
</resources>
